--- a/MiniMap/packages.config
+++ b/MiniMap/packages.config
@@ -8,6 +8,7 @@
   <package id="MapSuiteDesktopForWpf-BareBone" version="10.4.1" targetFramework="net45" />
   <package id="ThinkGeo.Cloud.Client" version="10.4.2" targetFramework="net45" />
   <package id="ThinkGeo.MapSuite" version="10.4.0" targetFramework="net45" />
+  <package id="ThinkGeo.MapSuite.Layers.Background" version="10.4.0" targetFramework="net45" />
   <package id="ThinkGeo.MapSuite.Layers.ShapeFile" version="10.4.0" targetFramework="net45" />
   <package id="ThinkGeo.MapSuite.Layers.Wms" version="10.4.0" targetFramework="net45" />
   <package id="ThinkGeo.MapSuite.Layers.WorldStreetsAndImagery" version="10.4.0" targetFramework="net45" />
